# playstation-revival

./: README.md
memory-card/: .gitignore  README.md  pyproject.toml
serial-tool/: .gitignore  README.md  build.sh  nops.containerfile
